syntax = "proto3";

option go_package = "../gen;docsv1";

service Docs {
    rpc Create(CreateRequest) returns (SuccessResponse);
    rpc Delete(DeleteRequest) returns (SuccessResponse);
    rpc GetFiltered(GetFilteredRequest) returns (GetResponse);
    rpc Search(SearchRequest) returns (GetResponse);
    rpc Update(UpdateRequest) returns (SuccessResponse);
}

message SuccessResponse {
    bool success=1;
}

message Doc {
    int64 id=1;
    string type=2;
    string group=3;
    string fio=4;
    string theme=5;
    string director=6;
    int32 year=7;
    string order=8;
    string reviewer=9;
    string discipline=10;
}

message GetResponse {
    repeated Doc docs=1;
}

message CreateRequest {
    string type=1;
    string group=2;
    string fio=3;
    string theme=4;
    string director=5;
    int32 year=6;
    string order=7;
    string reviewer=8;
    string discipline=9;
}

message DeleteRequest {
    int64 id=1;
}

message GetFilteredRequest {
    string type=1;
    string group=2;
    string fio=3;
    string theme=4;
    string director=5;
    int32 year=6;
    string order=7;
    string reviewer=8;
    string discipline=9;
}

message SearchRequest {
    string search_line=1;
}

message UpdateRequest {
    int64 id=1;
    string type=2;
    string group=3;
    string fio=4;
    string theme=5;
    string director=6;
    int32 year=7;
    string order=8;
    string reviewer=9;
    string discipline=10;
}